[package]
name = "riv-demo-wasm"
version = "0.1.0"
edition = "2024"
description = "Minimal WASM player demo for the RIV codec"
repository = "https://github.com/xhighway999/riv2"
license = "MIT OR Unlicense"

[lib]
crate-type = ["cdylib"]

[dependencies]
reitero_decode = { git = "ssh://git@github.com/xhighway999/riv2.git", package = "reitero_decode", default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
